@startuml

hide stereotype
hide circle
skinparam classAttributeIconSize 0

class Feedback {
  +id: String
  +fullName: String
  +email: String
  +mobile: String
  +product: String
  +ratedStar: Int
  +feedback: String
  +images: List<String>
  +status: String
  --
  +viewDetails(): void
}

class FeedbackDetailsPage {
  +feedback: Feedback
  --
  +displayFeedbackDetails(): void
  +changeStatus(): void
}

class User {
  +id: String
  +name: String
  +email: String
  +password: String
  --
  +login(email: String, password: String): Boolean
  +login(email: String, password: String): Boolean
  +logout(): void
}

FeedbackDetailsPage -- Feedback
User -- Feedback 

@enduml
